...
                Spacer(modifier = Modifier.height(25.dp))
                Row(
                    modifier = Modifier.padding(horizontal = 15.dp),
                    verticalAlignment = Alignment.CenterVertically
                ) {
                    Text(
                        text = "필터 설정",
                        fontFamily = poppins,
                        fontSize = 20.sp,
                        fontWeight = FontWeight.SemiBold
                    )
                    Spacer(modifier = Modifier.weight(1f))
                    Box(
...
                                onStartDatePick()
                            }
                            .padding(horizontal = 10.dp),
                        verticalAlignment = Alignment.CenterVertically
                    ) {
                        Text(
                            text = boardUiState.startDate.ifEmpty { "시작일을 선택해주세요" },
                            modifier = Modifier.padding(top = 3.dp),
                            fontFamily = poppins,
                            fontSize = 15.sp,
                            fontWeight = FontWeight.Medium,
                            color = HaengshaBlue
                        )
...
                                onEndDatePick()
                            }
                            .padding(horizontal = 10.dp),
                        verticalAlignment = Alignment.CenterVertically
                    ) {
                        Text(
                            text = boardUiState.endDate.ifEmpty { "종료일을 선택해주세요" },
                            modifier = Modifier.padding(top = 3.dp),
                            fontFamily = poppins,
                            fontSize = 15.sp,
                            fontWeight = FontWeight.Medium,
                            color = HaengshaBlue
                        )
...
                                            )
                                            .show()
                                    }
                                    boardViewModel.updateIsFestival(0)
                                }
                            }
                            .testTag("festival checkBox")
                        ) {
                            CheckBox(
                                color = if (boardUiState.isFestival == 0) Color.Transparent else ButtonBlue,
                                size = 22
                            )
                        }
...
                                            )
                                            .show()
                                    }
                                    boardViewModel.updateIsFestival(1)
                                }
                            }
                            .testTag("academic checkBox")
                        ) {
                            CheckBox(
                                color = if (boardUiState.isFestival == 1) Color.Transparent else ButtonBlue,
                                size = 22
                            )
                        }
...
                            onDismissRequest()
                            boardViewModel.cancelFilter()
                        }
                    )
                    Spacer(modifier = Modifier.weight(1f))
                    ModalConfirmButton(
                        type = "적용",
                        onClick = {
                            if (boardUiState.keyword.isEmpty()) {
                                Toasty.warning(context, "검색 후 필터를 적용해주세요", Toast.LENGTH_SHORT, true)
                                    .show()
                            } else if (!boardViewModel.isSearched.value) {
                                Toasty.warning(
...
                                dateFormatter.format(
                                    Date(
                                        selectedDate
                                    )
                                )
                            )
                        } else { // usage == "filter"
                            boardViewModel.updateFilterStartDate(
                                dateFormatter.format(
                                    Date(
                                        selectedDate
                                    )
                                )
...
                                )
                            )
                        }
                    }
                    onDismissRequest()
                }) {
                Text(text = "확인")
            }
        },
        dismissButton = {
            Button(onClick = onDismissRequest) {
                Text(text = "취소")
            }
        },
    ) {
        DatePicker(
            state = datePickerState,
            showModeToggle = false
...
