...
                                modifier = Modifier
                                    .fillMaxWidth()
                                    .height(40.dp),
                                verticalAlignment = Alignment.CenterVertically
                            ) {
                                Text(
                                    text = boardPostUiState.value.startDate.ifEmpty { "시작일 (필수)" },
                                    modifier = Modifier
                                        .border(
                                            width = 1.dp,
                                            color = HaengshaBlue,
                                            shape = RoundedCornerShape(6.dp)
                                        )
...
                                    fontSize = 18.sp,
                                    fontWeight = FontWeight.Medium,
                                    color = HaengshaBlue
                                )
                                Spacer(modifier = Modifier.width(3.dp))
                                Text(
                                    text = boardPostUiState.value.endDate.ifEmpty { "종료일 (선택)" },
                                    modifier = Modifier
                                        .border(
                                            width = 1.dp,
                                            color = HaengshaBlue,
                                            shape = RoundedCornerShape(6.dp)
                                        )
...
                                verticalAlignment = Alignment.CenterVertically
                            ) {
                                Row(verticalAlignment = Alignment.CenterVertically) {
                                    Box(
                                        modifier = Modifier
                                            .clickable { eventCategory = 1 }
                                            .testTag("festivalCheckBox")
                                    ) {
                                        CheckBox(
                                            color = if (eventCategory == 1) ButtonBlue else Color.Transparent,
                                            size = 18
                                        )
                                    }
...
                                    )
                                }
                                Spacer(modifier = Modifier.weight(1f))
                                Row(verticalAlignment = Alignment.CenterVertically) {
                                    Box(modifier = Modifier
                                        .clickable { eventCategory = 0 }
                                        .testTag("academicCheckBox")
                                    ) {
                                        CheckBox(
                                            color = if (eventCategory == 1) Color.Transparent else ButtonBlue,
                                            size = 18
                                        )
                                    }
...
                    .clickable(onClick = { postConfirmDialog = true }),
                contentAlignment = Alignment.Center
            ) {
                Icon(
                    modifier = Modifier.size(25.dp),
                    imageVector = ImageVector.vectorResource(id = R.drawable.write_confirm_icon),
                    contentDescription = "event upload Button",
                    tint = Color.White
                )
            }
        }
        if (postConfirmDialog) {
            ConfirmDialog(
...
                        boardApiViewModel.postEvent(boardPostRequest = boardPostRequest)
                    } else {
                        Toasty.warning(postContext, errorMessage, Toasty.LENGTH_SHORT).show()
                        postConfirmDialog = false
                    }
                },
                text = "글을 업로드 하시겠어요?"
            )
        }
    }

    when (boardPostApiUiState) {
        is BoardPostApiUiState.Success -> {
...
