...
                                modifier = Modifier
                                    .fillMaxSize()
                                    .padding(innerPadding),
                                horizontalAlignment = Alignment.CenterHorizontally
                            ) {
                                Text(
                                    text = "찾고 싶은 행사를 검색해보세요!",
                                    fontFamily = poppins,
                                    fontSize = 20.sp,
                                    fontWeight = FontWeight.SemiBold,
                                    textAlign = TextAlign.Center
                                )
                                Spacer(modifier = Modifier.height(20.dp))
...
                                horizontalAlignment = Alignment.CenterHorizontally,
                                verticalArrangement = Arrangement.Center
                            ) {
                                CustomCircularProgressIndicator()
                                Spacer(modifier = Modifier.height(20.dp))
                                Text(
                                    text = "행사 찾아보는 중...",
                                    fontFamily = poppins,
                                    fontSize = 18.sp,
                                    fontWeight = FontWeight.SemiBold,
                                    color = HaengshaBlue
                                )
                            }
...
                                modifier = Modifier
                                    .fillMaxSize()
                                    .padding(innerPadding),
                                contentAlignment = Alignment.Center
                            ) {
                                Text(
                                    text = "찾는 행사가 없어요 :(",
                                    fontFamily = poppins,
                                    fontSize = 30.sp,
                                    fontWeight = FontWeight.SemiBold,
                                    textAlign = TextAlign.Center
                                )
                            }
...
                        .clickable(onClick = { boardNavController.navigate(BoardRoute.BoardPost.route) }),
                    contentAlignment = Alignment.Center
                ) {
                    Icon(
                        modifier = Modifier.size(25.dp),
                        imageVector = ImageVector.vectorResource(id = R.drawable.write_festival_icon),
                        contentDescription = "event post Button",
                        tint = Color.White
                    )
                }
            }
        }

...
