...
    <string name="terms_of_use"><b>1. 목적</b> \n본 약관은 \'행샤\'(이하 "조직")에서 제공하는 커뮤니티 서비스(이하 "서비스")의 이용과 관련하여 조직과 이용자의 권리, 의무 및 책임사항, 기타 필요한 사항을 규정함을 목적으로 합니다. \n\n<b>2.용어의 정의</b> \n본 약관에서 사용하는 용어의 정의는 다음과 같습니다. \n\n"이용자": 조직의 서비스에 접속하여 본 약관에 따라 조직이 제공하는 서비스를 받는 회원 및 비회원을 말합니다. \n"회원": 조직과 이용 계약을 체결하고 이용자 아이디를 부여받아 서비스를 이용하는 이용자를 말합니다. \n\n<b>3.약관의 게시 및 변경</b> \n조직은 본 약관의 내용을 이용자가 쉽게 알 수 있도록 서비스 초기 화면에
    <string name="privacy_policy">본 개인정보 수집 및 처리 방침은 \'행샤\'(이하 "조직")에서 운영하는 커뮤니티 서비스(이하 "서비스")에 적용됩니다. \n\n<b>개인정보의 수집 항목 및 방법</b> \n\n조직은 회원가입, 서비스 제공 및 상담 등을 위해 아래와 같은 개인정보를 수집하고 있습니다. \n\n필수 항목: 이메일 주소, 비밀번호, 닉네임, 학과, 학번 \n선택 항목: 관심사 \n개인정보 수집 방법: 회원가입, 서비스 이용 과정에서 사용자로부터 직접 수집 \n\n<b>개인정보의 수집 및 이용 목적</b> \n\n서비스 제공, 이용자 식별 및 본인 확인, 불량 회원의 부정 이용 방지, 서비스 이용에 대한 통계, 고객 서비스 등 \n\n<b>개인정보의 보유 및 이용 

    <!-- Test Tag -->
    <string name="commonTextField">commonTextField</string>
    <string name="codeVerifyField">codeVerifyField</string>
    <string name="suffixTextField">suffixTextField</string>
    <string name="passwordTextField">passwordTextField</string>
    <string name="passwordSetField">passwordSetField</string>
    <string name="passwordCheckTextField">passwordCheckTextField</string>
    <string name="searchBar">searchBar</string>
    <string name="commentTextField">commentTextField</string>
    <string name="customTextField">customTextField</string>
</resources>
